# zeta

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
docs/: BOX_DESIGN.md  CONTROL_FLOW_DESIGN.md  ENUM_DESIGN.md  GENERICS_DESIGN.md  GENERIC_INSTANCE_DEDUP_DESIGN.md  GENERIC_INTERFACE_DESIGN.md  INTERFACE_DIAGNOSTICS.md  IR_VERIFIER_DESIGN.md  ITERATION_DESIGN.md  LIBRARY_BUILD_DESIGN.md  LLVM_BACKEND_DESIGN.md  OPTION_API_DESIGN.md  PUBLIC_ENUMS_DESIGN.md  PUBLIC_TYPES_DESIGN.md  SHARED_LIBRARY_CACHE_DESIGN.md  SLICE_DESIGN.md  USER_METHODS_DESIGN.md  USER_TRAITS_DESIGN.md  VEC_DESIGN.md
examples/: basic.zeta  stdlib_showcase.zeta
examples/resource_showcase/: game_types.zeta  main.zeta  resources.zeta
runtime/: io.asm  native_api.asm  strings.asm
src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  diagnostic.hpp  generic_tokens.cpp  generic_tokens.hpp  interface.cpp  interface.hpp  ir.cpp  ir.hpp  ir_verifier.cpp  ir_verifier.hpp  lexer.cpp  lexer.hpp  main.cpp  module.cpp  module.hpp  parser.cpp  parser.hpp  semantic.cpp  semantic.hpp  symbol_table.hpp  token.hpp  type_rules.hpp  version.hpp
stdlib/: collections.zeta  io.zeta  option.zeta  probe.zeta  sequences.zeta  strings.zeta  vectors.zeta
tests/: array_comparison.zeta  array_copy.zeta  array_dynamic_bounds.zeta  array_element_mismatch.zeta  array_function_signature.zeta  array_immutable_mutation.zeta  array_index.zeta  array_index_negative.zeta  array_index_too_large.zeta  array_length_mismatch.zeta  array_literal_syntax.zeta  array_mutation.zeta  array_type_syntax.zeta  array_types.zeta  array_zero_length.zeta  assignment.zeta  block_expressions.zeta  block_missing_result.zeta  block_scope.zeta  bool_argument_mismatch.zeta  bool_arithmetic.zeta  bool_conversion_source.zeta  bool_conversion_target.zeta  bool_int_mismatch.zeta  bool_numeric_literal.zeta  bool_ordering.zeta  bool_type.zeta  boolean_operators.zeta  box_aggregate_content.zeta  box_allocator_stress.zeta  box_asymmetric_move.zeta  box_conditional_move.zeta  box_construct_dereference.zeta  box_constructor_mismatch.zeta  box_content_borrow.zeta  box_content_borrow_conflict.zeta  box_content_immutable.zeta  box_content_mut_borrow_val.zeta  box_duplicate_call_argument.zeta  box_early_drop.zeta  (+417 more)
tests/clang_backend_values/: config.zeta  main.zeta
tests/extension_method_collision/: first.zeta  main.zeta  second.zeta
tests/extension_method_interfaces/: main.zeta  vec_extensions.zeta
tests/extension_method_mutable_val/: main.zeta  vec_extensions.zeta
tests/fixtures/stdlib/: probe.zeta  vec_generic_fixture.zeta
tests/generic_instance_dedup/: left.zeta  main.zeta  right.zeta
tests/generic_interface_cache/: api.zeta  main.zeta
tests/interface_diagnostics/: main.zeta  types.zeta
tests/modules_cycle/: a.zeta  b.zeta  main.zeta
tests/modules_duplicate_export/: doublon.zeta  main.zeta
tests/modules_integration/: main.zeta  maths.zeta  service.zeta  textes.zeta
tests/modules_loading/: helper.zeta  main.zeta
tests/modules_native_declaration/: main.zeta  native_api.zeta
tests/modules_private/: helper.zeta  main.zeta
tests/modules_wrong_arity/: helper.zeta  main.zeta
tests/multiple_constraints_interfaces/: api.zeta  main.zeta
tests/public_enum_interfaces/: main.zeta  types.zeta
tests/public_struct_interfaces/: main.zeta  types.zeta
tests/user_method_interfaces/: counters.zeta  main.zeta
tests/user_traits_interfaces/: capabilities.zeta  main.zeta  models.zeta  orphan.zeta
